--- a/index.html
+++ b/index.html
@@ -23,6 +23,40 @@
     <div id="three-js-container">
     </div>
 
+    <div class="temp">
+        <div class="container">
+            <div class="row row-1">
+                <div class="col-12 text-center">
+                    <img src="assets/layer1.png" alt="diagram" class="w-75">
+                </div>
+            </div>
+            <div class="row row-2">
+                <div class="col-12">
+                    <img src="assets/layer2.JPG" alt="image" class="w-100">
+                </div>
+            </div>
+            <div class="row row-3">
+                <div class="col-3 text-block">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, voluptatibus reiciendis aperiam ut autem et molestias perferendis officia quam aut facilis quo, nemo blanditiis eum praesentium aliquid magnam quasi debitis!</p>
+                </div>
+            </div>
+            <div class="row row-4">
+                <div class="col-6 mx-auto text-block">
+                    <h1>Fanon</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, ab. Nostrum eius dolore in quia dolores! Quibusdam voluptates aspernatur delectus accusantium, nostrum nisi inventore magnam, minus rerum, porro officia nam.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet velit neque deleniti beatae non? Incidunt animi aperiam sit ab et nemo praesentium, ea distinctio dolorem dolorum facere amet officiis?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex corporis, saepe omnis esse quae fuga inventore aperiam autem illum placeat enim, nobis molestias quasi maxime recusandae voluptas rerum provident molestiae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     
 
