--- a/index.html
+++ b/index.html
@@ -11,51 +11,28 @@
 
 
 <body>
-
-    <div id="overlay" class="container-fluid">
-        <div class="row">
-            <div class="col-12 text-center">
-                <button id="btn-begin" class="btn btn-primary">start</button>
-            </div>
+<div class="container-fluid" id="overlay">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Rehane Abrahams</h1>
+            <p>
+                zoom through the experience to view the project
+            </p>
+            <button id="btn-begin" class="btn btn-primary">start</button>
         </div>
     </div>
+</div>
 
-    <div id="three-js-container">
+<div class="viewport">
+  <div class="scene3D-container">
+    <div class="scene3D">
+        <div class="layers">one</div>
+        <div class="layers">two</div>
+        <div class="layers">three</div>
     </div>
-
-    <div class="temp">
-        <div class="container">
-            <div class="row row-1">
-                <div class="col-12 text-center">
-                    <img src="assets/layer1.png" alt="diagram" class="w-75">
-                </div>
-            </div>
-            <div class="row row-2">
-                <div class="col-12">
-                    <img src="assets/layer2.JPG" alt="image" class="w-100">
-                </div>
-            </div>
-            <div class="row row-3">
-                <div class="col-3 text-block">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, voluptatibus reiciendis aperiam ut autem et molestias perferendis officia quam aut facilis quo, nemo blanditiis eum praesentium aliquid magnam quasi debitis!</p>
-                </div>
-            </div>
-            <div class="row row-4">
-                <div class="col-6 mx-auto text-block">
-                    <h1>Fanon</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, ab. Nostrum eius dolore in quia dolores! Quibusdam voluptates aspernatur delectus accusantium, nostrum nisi inventore magnam, minus rerum, porro officia nam.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet velit neque deleniti beatae non? Incidunt animi aperiam sit ab et nemo praesentium, ea distinctio dolorem dolorum facere amet officiis?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex corporis, saepe omnis esse quae fuga inventore aperiam autem illum placeat enim, nobis molestias quasi maxime recusandae voluptas rerum provident molestiae.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+  </div>
+</div>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     
@@ -66,6 +43,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- three.js script -->
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
