--- a/index.html
+++ b/index.html
@@ -25,10 +25,122 @@
 
 <div class="viewport">
   <div class="scene3D-container">
-    <div class="scene3D">
-        <div class="layers">one</div>
-        <div class="layers">two</div>
-        <div class="layers">three</div>
+    <div class="scene3D container-fluid">
+        
+        <!-- section one -->
+        <div class="layers row">
+            <div class="col-12 d-flex justify-content-center">
+                <img src="assets/layer1.png" class="img-full">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 d-flex justify-content-center">
+                <img src="assets/layer2.JPG" class="img-full">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-4 h-100 offset-md-4 d-flex align-items-center justify-content-center">
+                <div class="text-block">
+                    <p>
+                        Grounding in Sacred Space – The Dikenga (congo)/ Medicine Wheel/ Sacred Circle is a Cosmogram that represents integrated wholeness. Aligning the Body in relationship to the Earth Sacred space in which to challenge racial, sexual and colonial violence on the female body; to figure the imbrication of the artistic, the spiritual and the political. Placing the body in this space recognises that the diseases of the body/ mind/spirit are diseases of culture and history. It is a non-linear space-time that focusses on restoring sacred interconnection between all life. 
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 h-100 offset-md-3 d-flex align-items-center justify-content-center">
+                <div class="text-block-major">
+                   <h1>The Disease is Alienation </h1>
+                   <p>
+                       This is an experiment that seeks out ways to restore womxn’s bodies to a sense of safety in the midst of ongoing, systemic, intergenerational violence. It frames the body in an intrinsically interrelated field as a decolonial surthrival strategy. It seeks to explore simple organic safety so that organs can simply function. The tools are body/breath/imagination.
+                    </p>
+                    <p><i>The Cause is Colonialism</i></p>
+                    <p><i>The cure is Revolution </i></p>
+                    <p><i>And the Destiny is Freedom</i></p>
+                    <p><b>~ Fanon</b></p>
+                </div>
+            </div>
+        </div>
+
+        <!-- section 2 -->
+        <div class="layers row">
+            <div class="col-12 h-100 d-flex justify-content-center align-items-center">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="assets/woff_2/layer_5_1.jpg" class="w-100 img-opaque">
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/woff_2/layer_5_2.jpg" class="w-100 img-opaque">
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/woff_2/layer_5_3.jpg" class="w-100 img-opaque">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 text-center">
+                <img src="assets/woff_2/layer_5_4.jpg" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 h-100">
+                <div class="row h-100">
+                    <div class="col-6 h-100 d-flex justify-content-center align-items-center">
+                        <div class="text-block">
+                            <h1>Guided visualisation</h1>
+                            <audio src="assets/woff_2/Rehane_03_3.mp3" controls preload></audio>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="assets/woff_2/layer_7.jpg" class="img-full img-opaque">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 h-100 text-center">
+                <img src="assets/woff_2/WOF 2.JPG" alt="" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-4 offset-md-8 h-100 d-flex justify-content-center align-items-center">
+                <div class="text-block">
+                    <h1>Fascia as  Decolonial Medicine</h1>
+                    <p>
+                        Fascia – a whole body, continuous 3D, interconnective matrix that permeates the whole Body, gives Structural support and interpenetrates organs, muscles, bones and nerve fibers. Able to change state from solid to liquid, fascia reforms itself and is self-regulating. Human fascia is a  direct functional replica of the relational web of land and all living beings. Fascial  wareness challenges notions of separateness, of mechanism, of alienation. Imbued with the interconnected life that vitalises all - the body is able to adapt, change,  be repaired and restored in relation to other organisms.
+
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- section 3 -->
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3">
+                <div class="text-block-major">
+                    <p>
+                        The Vagus (Wandering)  Nerve is the longest nerve in the Body travelling to and from the Brain through the face, ears throat, heart, lungs, stomach, pancreas gut,  liver,kidneys and recently observed, through the uterus and cervix. Most of the information travels from the body to the brain.
+                    </p>
+                    <p>
+                        Intertwined bundle of nerves that function to detect threat and respond. There are 3 main circuits. Fight/Flight sits on your midback. Social Engagement in your Heart and Lungs. Freeze and Play dead sits below the diaphragm. Prolonged and unprocessed threat of violence (even epigenetically transferred from previous generations) can cause a hypervigilant feedback loop to and from brain and organs.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="assets/intro/layer_1.JPG" class="img-full img-opaque">
+                    </div>
+                    <div class="col-6">
+                        <img src="assets/intro/layer_2.jpg" class="img-full img-opaque">
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
   </div>
 </div>
