--- a/index.html
+++ b/index.html
@@ -140,6 +140,133 @@
                 </div>
             </div>
         </div>
+
+        <!-- section 4 -->
+        <div class="layers row">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="assets/woff_3/layer_1_1.JPG" alt="" class="img-full img-opaque">
+                    </div>
+                    <div class="col-6">
+                        <div class="text-block">
+                            <p>
+                                The ventral vagal is the newer branch of the vagus nerve that travels bidirectionally from the brain through the face, throat, lungs and heart and is related to feelings such as joy and love experienced in the safe company of others. When these methods of co-regulation are not available to us, the exercises are useful in calming anxiety, and recovering a sense of safety.  The goal of these taster exercises is to stimulate the ventral branch of the Vagal nerve thereby enhancing feelings of social engagement and a sense of safety so that we are more responsive to the environment no matter what it contains. Make sure before you begin these exercises that you are in a relatively safe environment where you can practice uninterrupted so that you are free to deepen into relaxation. It may be useful to journal about your bodily sensations, thoughts and feelings to observe the effects of the exercises.
+
+                            </p>
+                        </div>
+                        <img src="assets/woff_3/layer_1_2.jpg" class="w-50">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 text-center">
+                <img src="assets/woff_3/layer_2.JPG" alt="" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12">
+                <iframe src="https://player.vimeo.com/video/265649086" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="" alt="missing image" class="img-full img-opaque">
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/woff_3/layer_4_2.JPG" alt="missing image" class="img-full img-opaque">
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/woff_3/layer_4_3.jpg" alt="missing image" class="img-full img-opaque">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- section 5 -->
+        <div class="layers row">
+            <div class="col-md-8 offset-md-2">
+                <div class="text-block">
+                    <h1>Simple Spinal alignment</h1>
+                    <p>
+                        This first sequence regulates the ventral vagus by repositioning the first two neck vertebrae – this increases bloodflow and has a positive effect on the ventral vagal system. It is interesting to note that something as slight as a fearful thought can put these two vertebrae out of alignment – compromising function all the way through the ventral vagal system – face, throat, lung, heart, diaphragm. 
+                    </p>
+                    <ul>
+                        <li>Lie in constructive rest position. </li>
+                        <li>First observe the motion of your neck from side to side. Moving your head first to the right. Chin to shoulder and then to the left. Take note of your range of motion.</li>
+                        <li>Interweave your fingers and place them behind your head. Feel the hardness of your cranium with your fingers. Feel the bones of your fingers on the back of your head. </li>
+                        <li>Without moving your head. Look to the right as far as you can. Keep looking until you feel a swallow, a yawn or a sigh. This is a sign that your autonomic nervous system is relaxing. </li>
+                        <li>Look straight ahead. </li>
+                        <li>Now repeat on the left. Without moving your head. Look to the left as far as you can. </li>
+                        <li>Keep looking until you feel a swallow, a yawn or a sigh.</li>
+                        <li>Now observe the motion of your neck from side to side. Has your range of motion increased?</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-8 offset-md-2">
+                <div class="text-block">
+                    <h1>Exercise for Ventral Vagal innervation in your chest</h1>
+                    <p>We are working on the vagus nerve as it goes into the pace maker of our heart, our lung tissue and the fascial tissue of the diaphragm. There are three stages to this exercise: on the back; the side and the belly.</p>
+
+                    <h2>On the Back</h2>
+                    <ul>
+                        <li>Lying in constructive rest position. Take a pillow rolled up and place it under your hips or pelvis so that your pelvis is higher than your chest and neck. This produces a response in your carotid artery that encourages ventral vagal relaxation.</li>
+                        <li>Inhale until you are full. Once you are full – swallow. Just simulate a swallowing action. </li>
+                        <li>Exhale for longer than your inhale. </li>
+                        <li>Then hold out the breath or wait until you have to breathe. </li>
+                        <li>Repeat this exercise as many times as you like. Inhale till you are full. Swallow. Exhale for longer than your inhale. Then wait until you need to breathe. Do as many rounds as you like.</li>
+                    </ul>
+
+                    <h2>On the Side</h2>
+                    <ul>
+                        <li>Lie on your side – with a pillow under your chest. Your head on another pillow or block. </li>
+                        <li>Be comfortable and at ease.</li>
+                        <li>Put your upper hand on your ribs. Breathe in to full. Make the action as if you were going to cough – you don’t need to actually cough. This action will also relax your diaphragm. </li>
+                        <li>Breathe out and hold the breath out for as long as you can. </li>
+                        <li>Now try that on the other side. Lie on your side – with a pillow under your chest. Your head on another pillow or block. Put your upper hand on your ribs. Breathe in to full. Make the action as if you were going to cough –. Breathe out and hold the breath out for as long as you can. </li>
+                    </ul>
+
+                    <h2>On the Belly</h2>
+                    <ul>
+                        <li>Now lie on your belly – with the pillow rolled up under your sternum.</li>
+                        <li>Breathe in to full. </li>
+                        <li>Make the action as if you were going to cough.</li>
+                        <li>Breathe out and hold the breath out for as long as you can. </li>
+                        <li>Repeat as many rounds as you need.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-8 offset-md-2">
+                <div class="text-block">
+                    <h1>FitzMaurice Vocal Release</h1>
+                    <p>
+                        In this exercise we will employ a soft outward breath through the lips with fluffy sound –fffv. Once you are in the position – try to find a tremor as the limbs struggle between conflicting instructions of relaxing and engaging.  
+                    </p>
+
+                    <h2>Modified Cobra</h2>
+                    <ul>
+                        <li>Begin on your back – stretch, scrunch, shake and surrender. </li>
+                        <li>Practice a few rounds of the soft fluffy breath.</li>
+                        <li>Roll over onto your belly. </li>
+                        <li>lace your hands under your shoulders. Push up into a modified cobra. Simultaneously relax and engage your arms. Keep exhaling on the fluffy relaxed </li>
+                        <li>Feel the involuntary tremor. It can be very small. </li>
+                        <li>Allow the tremor to travel up into your chest. <b>Relax your belly</b>, keep breathing. Let your head go. Try and melt your organs – the only engagement is in your arms. Relax your belly. <b>Let your head go.</b> </li>
+                        <li>Allow the breath to fall out on the fluffy sound. </li>
+                        <li>Allow whatever sound emerges to emerge, laughter, tears, whatever emerges allow it without attaching a story.</li>
+                    </ul>
+                    <p>
+                        Continue until you feel the need to stop - move into child’s pose. Rest your forehead on the floor and restore your breath to normal. Now would be a good time to free right or journal.
+                    </p>
+                </div>
+            </div>
+        </div>
         
     </div>
   </div>
