--- a/index.html
+++ b/index.html
@@ -267,6 +267,153 @@
                 </div>
             </div>
         </div>
+
+        <!-- section 6 -->
+        <div class="layers row">
+            <div class="col-12 h-100 text-center">
+                <img src="assets/woff_4/layer_1.jpg" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 h-100 text-center">
+                <img src="assets/woff_4/layer_2.jpg" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-8 offset-md-2 h-100 d-flex justify-content-center align-items-center">
+                <div class="text-block">
+                    <h1>Dorsal Vagal </h1>
+                    <p>
+                        The dorsal vagal branch is the older of the two branches of the Vagus Nerve. It travels bidirectionally from the brain into the pelvis and through the gut, stomach, liver, spleen and reproductive organs. It is present in all vertebrates and is the first part of the nervous system to develop in utero. It’s survival strategy is metabolic shutdown. We utilise this state to cope with extreme danger and imminent destruction in order to conserve energy and avoid the attention of predators. Ideally, we should come out of this state when the threat passes, our bodies may hold on to this state when threats to our safety are pervasive
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 h-100">
+                <img src="assets/woff_4/layer_4.JPG" alt="" class="img-full img-opaque">
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12">
+                <iframe src="https://player.vimeo.com/video/265649086" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <!-- section 7 -->
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>Exercises</h1>
+                    <p>
+                        The following taster exercises are to intended to address the dorsal vagal nerve in the pelvis.  Remember that you are free to pause the video and journal if you feel moved to. Please do the exercises at your own pace. The accompanying video is meant as a guideline only. The Pelvic Fascial Massage described below is not included in the video.
+                    </p> 
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>FitzMaurice Vocal Release</h1>
+                    <p>
+                        We begin with a few Fitzmaurice vocal release exercises for the pelvic region. In this exercise we will employ a soft outward breath through the lips with fluffy sound –fffv. Once you are in the position – try to find a tremor as the limbs struggle between conflicting instructions of relaxing and engaging. It doesn’t have to be big. Allow the tremor to travel through your body as much as your body will allow.
+                    </p> 
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>Butterfly Legs</h1>
+                    <ul>
+                        <li>Begin on your back – stretch, scrunch, shake and surrender. Practice a few rounds of the soft fluffy breath. </li>
+                        <li>Place your knees up in the constructive rest position with your spine along the floor. </li>
+                        <li>Press the soles of your feet your feet together. Slowly let your knees fall open while at the same time trying to push them up and pressing your feet together.</li>
+                        <li>Locate the tremor in the conflict of dropping and raising the knees. </li>
+                        <li>Continue to breath out with a fluffy sound. </li>
+                        <li>Allow the rest of your body to relax. <b>Relax your belly.</b> Allow the tremor to travel through your lower abdomen. </li>
+                        <li>Allow whatever sound emerges to emerge, laughter, tears, whatever emerges allow it. </li>
+                        <li>There is no need to attach a story. </li>
+                        <li>Continue until you feel the need to stop. </li>
+                        <li>Allow your breath to return to normal.</li>
+                        <li>Rest</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>Seaweed</h1>
+                    <ul>
+                        <li>Begin again to engage the fluffy breath. </li>
+                        <li>Place a pillow under your hips so that your belly is relaxed. </li>
+                        <li>Raise up your legs and your arms. In between the tension of straightening and bending your legs – find the tremor. </li>
+                        <li>Continue with the fluffy breath. Allow sound to emerge. Keep your belly soft. Relax your face, forehead and neck.</li>
+                        <li>Now imagine that you are reaching for something that you want that is just out of reach. </li>
+                        <li>Continue to breath while you imagine that feeling. Fluffy breath, relaxed belly as the tremor travels through your pelvis.</li>
+                        <li>Holding the position of your arms and legs, now imagine that you have the thing that you want. Continue to breath out in fluffy sounds. Keep your belly soft, relax and allow the tremor to travel. </li>
+                        <li>Switch back to imagining something you want that is just out of reach. Breath the fluffy sound. Allow the tremor and the feelings to move through your pelvis. Alternate between wanting and having until you are ready to stop. </li>
+                        <li>Turn over into child’s pose. Rest and recover.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>Massage</h1>
+                    <h2>Fascial Massage of the Pelvis (additional to the video)</h2>
+                    <p>
+                        The fascial web interconnects all tissue. Particularly responsive to threat and GBV is the Psoas Muscle which connects the legs to the torso. Survivors of Sexual Violence are noted to suffer with extremely constricted Psoas Muscles. Stress in the musculature and fascia effect the organs and can lead to long term issues in the reproductive or other gut organs. For eg. BIPOC women in SA have unusually high incidences of Uterine Fibroids.
+                    </p>
+                    <ul>
+                        <li>Lie on your back in the constructive rest position with your knees up. Breathe fully in and out through the nose. </li>
+                        <li>With three fingers of your dominant hand move your hand over your belly feeling into the fascia just below your layer of fat.</li>
+                        <li> Begin to feel in the fascia for knots. Use your other hand to assist. When you have found a knot massage gently for about 10 or 20 seconds – you may feel the knot break up. </li>
+                        <li>Move your hand around your belly – gently massaging. </li>
+                        <li>Allow sound to fall out of you. Remain relaxed. </li>
+                        <li>Avoid your belly button it is very full of nerve endings and very sensitive – do not massage there. Move your hands gently around your belly locating and massaging more spots. Breathe fully in and out. </li>
+                    </ul>
+
+                    <p>If what you’re doing hurts, back off. This should feel slightly uncomfortable, and if your belly isn’t relaxed it might be more uncomfortable than it should be, but it shouldn’t HURT.</p>
+                    <p>If you find you have an extremely tight/knotted up belly, then try this once a day for a week.</p>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-md-6 offset-md-3 h-100 d-flex align-items-center">
+                <div class="text-block">
+                    <h1>Massage</h1>
+                    <h2>Organ Massage</h2>
+                    <p>
+                        This is a little visceral massage that helps the vagus nerves that go into your organs below the diaphragm. 
+                    </p>
+                    <ul>
+                        <li>Lie on your right side with a rolled up small pillow  or rounded towel under your belly. </li>
+                        <li>Place another pillow or block propping up your head so that you are comfortable and at ease. Allow your organs to spill over the pillow. Loose and floppy and soft. With your other hand, guide your gut bag to soften and spill. Massage your belly allowing the organs to soften and fall.</li>
+                        <li>Allow yourself to get quiet and listen to your organs. Listen for gurgles, allow gas to move. Breathe deeply through your nose. </li>
+                        <li>On the left side allow your top hand to move downward following the journey of your colon. </li>
+                    </ul>
+                    <p>Swap sides and repeat. </p>
+                    <ul>
+                        <li>Allow your organs to spill over the pillow. Loose and floppy and soft. With your other hand, guide your gut bag to soften and spill. Massage your belly allowing the organs to soften and fall.</li>
+                        <li>Allow yourself to get quiet and listen to your organs. Listen for gurgles, allow gas to move. Breathe deeply through your nose. On this side allow your top hand to move upward following the journey of your colon. </li>
+                    </ul>
+                    <p>           
+                        The vagus nerve send information to and from the brain to the viscera – this is your gut brain connection. Most of the information travels from the organs to the brain. Be soft, slow and listen
+                    </p>
+                    <p>
+                        When you feel the need to stop, slowly move into child’s pose. Breathe and slowly return to seated. Journal or rest and recover as you need.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="layers row">
+            <div class="col-12 h-100 text-center">
+                <img src="assets/woff_4/layer_6.jpg" class="img-full img-opaque">
+            </div>
+        </div>
         
     </div>
   </div>
