--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     </div>
 </div>
 
+<div class="controls">
+    <button id="forwards" class="btn btn-primary">forwards</button>
+    <button id="backwards" class="btn btn-danger">backwards</button>
+</div>
+
 <div class="viewport">
   <div class="scene3D-container">
     <div class="scene3D container-fluid">
