minor text change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="col-12 text-center">
             <h1>Rehane Abrahams</h1>
             <p>
-                zoom through the experience to view the project
+                scroll up and down to move forwards and backwards
             </p>
             <button id="btn-begin" class="btn btn-primary">start</button>
         </div>
